<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kr.holiday</groupId>
    <artifactId>korea-holiday-fetcher</artifactId>
    <version>0.2.0</version>
    <packaging>jar</packaging>

    <name>korea-holiday-fetcher</name>
    <description>대한민국 공휴일(국경일·대체공휴일) 조회 — 공공데이터포털 특일 정보제공 서비스(한국천문연구원) 클라이언트</description>

    <properties>
        <!-- 라이브러리 호환성: JDK 8 이상 어디서나 사용 가능 (release=8 이 9+ API 사용을 컴파일 단계에서 차단) -->
        <maven.compiler.release>8</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- JSON 파싱 (HTTP 는 JDK 내장 java.net.http 사용 — 별도 의존성 없음) -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.5</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- JUnit 5 실행 (2.22 미만이면 테스트를 발견하지 못함) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <!-- CLI 실행: ./mvnw compile exec:java -Dexec.args="2027" -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <mainClass>kr.holiday.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
